Closed Bug 73917 Opened 24 years ago Closed 24 years ago

cache entry data size not updated

Categories

(Core :: Networking: Cache, defect)

x86
Linux
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla0.9

People

(Reporter: darin.moz, Assigned: beard)

Details

(Whiteboard: [cache] fix checked into DISKCACHE1_BRANCH)

Attachments

(1 file)

cache entries in the disk cache report data size == 0. for the disk cache, i can verify that this is not the case. this is critical as it causes HTTP to never read data from the cache.
I take it that this is connected to the WARNING: Cached data size does not match the Content-Length header, file nsHTTPChannel.cpp, line 1140 messages that flood my console. regression, dogfood, ... ;-)
Taking.
Assignee: gordon → beard
This was caused by a change in how the dirty flags of the entry are maintained. I believe it used to be the case that we simply marked the entry dirty (IsEntryDirty()) when the data size changed. Now we mark the IsDataDirty() flag true when we change the size. Enclosing a patch to fix this. I'm checking this into the branch and will check in on trunk after I get a review.
Attached patch Fixes problem.Splinter Review
Can I get an r/sr?
Whiteboard: [cache] fix checked into DISKCACHE1_BRANCH
Target Milestone: --- → mozilla0.9
r=gagan, darin can you sr this?
sr=darin
I agree that this is a blocker level since all numbers generated would be way off... we are only writing to disk and not reading/using the cache. I am marking this smoketest
Keywords: smoketest
fix checked in
Status: NEW → RESOLVED
Closed: 24 years ago
Keywords: smoketest
Resolution: --- → FIXED
verified
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: