Fixes bug 73917 "cache entry data size not updated" patch=beard, r=gagan, sr=darin